[package]
name = "chess_engine"
version = "0.9.0"
edition = "2021"

[lib]
name = "chess_engine"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "chess"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "23.0"
winit = "0.30"
pollster = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
bytemuck = { version = "1.14", features = ["derive"] }
cfg-if = "1.0"
log = "0.4"
env_logger = "0.11"
glyphon = { version = "0.7.0", default-features = false }
rand = "0.8"
smallvec = "1.13"
rayon = "1.10"
num_cpus = "1.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Element",
    "console",
] }
console_error_panic_hook = "0.1"
console_log = "1.0"
web-time = "1.1"
wgpu = { version = "23.0", features = ["webgl"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
chess = "3.2"
criterion = "0.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
